--- a/D-download.Rmd
+++ b/D-download.Rmd
@@ -1,5 +1,5 @@
-# (APPENDIX) Appendix {-}
+# Download
 
-# Answer Guide
+Download this entire book as a Microsoft Word and Google Doc compatible `docx` file
 
 Coming soon!
