--- a/E-feedback.Rmd
+++ b/E-feedback.Rmd
@@ -1,5 +1,5 @@
-# (APPENDIX) Appendix {-}
+# Give Us Feedback
 
-# Answer Guide
+Thank you for your interest in this book! There are a few ways you can suggest improvements:
 
 Coming soon!
