reformat-student-guide

--- a/03-instructor_guide.Rmd
+++ b/03-instructor_guide.Rmd
@@ -23,7 +23,7 @@
 
 **Lesson Duration**  
 
-
+Coming soon!
 
 **Assessment Type**  
 
@@ -31,9 +31,11 @@
 
 ## Lesson Plan  {-}
 
+Coming soon!
 
 ## Notes for Instructors {-}
 
+Coming soon!
 
 ## Getting Credit for Professional Development {-}
 
