--- a/References.Rmd
+++ b/References.Rmd
@@ -1,24 +1,6 @@
 # References 
 
-All sequences were downloaded from NCBI's GenBank. We used sequence data from the following accession numbers:
-
-  - OX315675.1: omicron.2
-  
-  - OP093374.1: omicron.4
-  
-  - OP093373.1: omicron.5
-  
-  - OK091006.1: delta
-  
-  - NC_045512.2: Wuhan_reference
-
-  - OX003129.1: beta
-  
-  - OX315743.1: omicron.1
-  
-  - OW998592.1: alpha
-  
-  - MW911054.1: gamma
+All sequences were downloaded from NCBI's GenBank. We used sequence data from the following accession numbers: OX315675.1 (omicron.2), OP093374.1 (omicron.4), OP093373.1 (omicron.5), OK091006.1 (delta), NC_045512.2 (Wuhan_reference), OX003129.1 (beta), OX315743.1 (omicron.1), OW998592.1 (alpha), MW911054.1 (gamma).
 
 1. Benson DA, Cavanaugh M, Clark K, Karsch-Mizrachi I, Lipman DJ, Ostell J, Sayers EW. GenBank. Nucleic Acids Res. 2013 Jan;41(Database issue):D36-42. doi: 10.1093/nar/gks1195. Epub 2012 Nov 27. PMID: 23193287; PMCID: PMC3531190.
 
