--- a/03-instructor_guide.Rmd
+++ b/03-instructor_guide.Rmd
@@ -39,4 +39,4 @@ Coming soon!
 
 ## Getting Credit for Professional Development {-}
 
-We are happy to provide a letter to your supervisor, department head, or dean to indicate you've worked through this content and intend to use it in your class. See the example here.
+We are happy to provide a letter to your supervisor, department head, or dean to indicate you've worked through this content and intend to use it in your class. .
