--- a/B-help.Rmd
+++ b/B-help.Rmd
@@ -2,4 +2,4 @@
 
 We welcome any and all questions at our [Discourse Channel](https://help.anvilproject.org/).
 
-If you have feedback on the activity (Found a typo? Have a suggestion or idea?) please [submit an issue on our GitHub repository](https://github.com/fhdsl/GDSCN_SARS_Phylogeny_on_AnVIL/)
+If you have feedback on the activity (Found a typo? Have a suggestion or idea?) please [submit an issue on our GitHub repository](https://github.com/fhdsl/GDSCN_SARS_Phylogeny_on_AnVIL/).
