--- a/index.Rmd
+++ b/index.Rmd
@@ -38,20 +38,9 @@ Learning objectives for this activity come from the [Genetics Core Competencies]
 - Use bioinformatics to assess genetics data
 - Tap into the interdisciplinary nature of science
 
-## AnVIL Collection {-}
+## GDSCN Collection {-}
 
-Please check out our full collection of AnVIL resources below!
+This exercise is part of a collection of teaching resources developed through the *Genomic Data Science Community Network* (GDSCN). GDSCN works towards a vision where researchers, educators, and students from diverse backgrounds are able to fully participate in genomic data science research.  Learn more about GDSCN by visiting https://www.gdscn.org/home or reading the [article in Genome Research](https://doi.org/10.1101/gr.276496.121).
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
-source("scripts/anvil_repo_table.R")
-# Add below any repositories that should not be added
-exclude = c(
-  "anvil-intro",
-  "AnVIL_Template",
-  "AnVIL_Template_Test",
-  "GDSCN_bookdown_style"
-)
-# Create table for AnVIL repos detected through the API
-knitr::kable(make_anvil_repo_table(exclude), format = "html")
-```
+Please check out our full collection of AnVIL and related resources: https://hutchdatascience.org/AnVIL_Collection/
 
