--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "GDSCN Book: SARS Phylogeny on AnVIL"
+title: "GDSCN Book: SARS with RStudio on AnVIL"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 site: bookdown::bookdown_site
 documentclass: book
